--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="css/chromeiql.css"/>
+        <link rel="stylesheet" href="css/style.css"/>
     </head>
     <body>
         <div id="react-container">Loading...</div>
-        <script src="dist/chromeiql.js"></script>
+        <script src="dist/index.js"></script>
     </body>
 </html>
